created reset page

--- a/reset_password.html
+++ b/reset_password.html
@@ -13,22 +13,18 @@
     <section class="container">
       <div class="form-container">
         <form>
-          <h3>Login Here</h3>
+          <h3>Reset Password</h3>
 
           <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" placeholder="Email or Phone" id="username" />
+            <label for="username">Email</label>
+            <input
+              type="text"
+              placeholder="Enter your registed email address"
+              id="username"
+            />
           </div>
 
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" placeholder="Password" id="password" />
-            <a href="/reset_password.html" class="forgot-pasword"
-              >forgot password?</a
-            >
-          </div>
-
-          <button>Log In</button>
+          <button>Send</button>
         </form>
       </div>
     </section>
