created reset password page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="/assets/styles/main.css" />
-    <title>Form Css</title>
+    <title>FLogin form</title>
   </head>
   <body>
     <section class="container">
@@ -23,7 +23,7 @@
           <div class="form-group">
             <label for="password">Password</label>
             <input type="password" placeholder="Password" id="password" />
-            <a href="/reset_password.html" class="forgot-pasword"
+            <a href="/forgot_password.html" class="forgot-pasword"
               >forgot password?</a
             >
           </div>
