--- a/forgot_password.html
+++ b/forgot_password.html
@@ -7,26 +7,24 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="/assets/styles/main.css" />
-    <title>Reset Password</title>
+    <title>Forgot Password</title>
   </head>
   <body>
     <section class="container">
       <div class="form-container">
         <form>
-          <h3>Reset Password</h3>
+          <h3>Forgot yor Password?</h3>
 
           <div class="form-group">
-            <label for="password">Current Password</label>
+            <label for="username">Email</label>
             <input
-              type="password"
-              placeholder="Your current password"
-              id="password"
+              type="text"
+              placeholder="Enter your registed email address"
+              id="username"
             />
-          </div>
-
-          <div class="form-group">
-            <label for="password">New Password</label>
-            <input type="password" placeholder="New password" id="password" />
+            <a href="/reset_password.html" class="forgot-pasword"
+              >Reset password</a
+            >
           </div>
 
           <button>Send</button>
