--- a/forgot_password.html
+++ b/forgot_password.html
@@ -19,7 +19,7 @@
             <label for="username">Email</label>
             <input
               type="text"
-              placeholder="Enter your registed email address"
+              placeholder="Enter your registered email address"
               id="username"
             />
             <a href="/reset_password.html" class="forgot-pasword"
