--- a/reset_password.html
+++ b/reset_password.html
@@ -29,7 +29,7 @@
             <input type="password" placeholder="New password" id="password" />
           </div>
 
-          <button>Send</button>
+          <button>Reset</button>
         </form>
       </div>
     </section>
